[gd_scene load_steps=14 format=3 uid="uid://xh5nlhou488s"]

[ext_resource type="Script" path="res://dialog/cutscenes/base_cutscene.gd" id="1_wksin"]
[ext_resource type="Shader" path="res://dialog/cutscenes/cutscene_filter.gdshader" id="2_rsois"]
[ext_resource type="StyleBox" path="res://dialog/cutscenes/skip_button.tres" id="3_ddaw8"]
[ext_resource type="FontFile" uid="uid://54p5uev3vyaw" path="res://assets/font/ThaleahFat.ttf" id="3_rsois"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6hcs3"]
shader = ExtResource("2_rsois")
shader_parameter/grayscale_amount = 0.0
shader_parameter/sepia_amount = 0.0

[sub_resource type="Animation" id="Animation_lah1w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeLayer:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [255.0]
}

[sub_resource type="Animation" id="Animation_6xvsu"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeLayer:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(2.297397, 5.4641604),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_juhjp"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeLayer:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lah1w"]
_data = {
&"RESET": SubResource("Animation_lah1w"),
&"fade_in": SubResource("Animation_6xvsu"),
&"fade_out": SubResource("Animation_juhjp")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsois"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_bottom = 3
border_color = Color(0.42651907, 0.20524952, 0.0027889363, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hcs3"]
bg_color = Color(0.99607843, 0.5803922, 0.27058825, 1)
border_width_left = 3
border_width_bottom = 3
border_color = Color(0.9961986, 0.57887185, 0.2696548, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0

[sub_resource type="InputEventKey" id="InputEventKey_lah1w"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_6xvsu"]
events = [SubResource("InputEventKey_lah1w")]

[node name="BaseCutscene" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(480, 270)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wksin")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 2
material = SubResource("ShaderMaterial_6hcs3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(240, 135)
expand_mode = 1
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="FadeLayer" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 255)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lah1w")
}

[node name="UI" type="CanvasLayer" parent="."]
layer = 128

[node name="SkipButton" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_bottom = 31.0
grow_horizontal = 0
tooltip_auto_translate_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rsois")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("3_ddaw8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rsois")
theme_override_styles/hover = SubResource("StyleBoxFlat_6hcs3")
theme_override_styles/focus = ExtResource("3_ddaw8")
shortcut = SubResource("Shortcut_6xvsu")
shortcut_in_tooltip = false
text = "SKIP >>>"
flat = true

[connection signal="pressed" from="UI/SkipButton" to="." method="_on_skip_button_pressed"]
